fix(aurora): the JVM advisory never reached the log file
The GC and heap advisory was written to the raw stream the banner uses.
That stream reaches the console and never reaches logs/latest.log, so the
one operator who needs the warning most -- the one reading logs after a
lag incident to find out why the server was swapping -- could not see it.

It is logged at WARN now, which reaches both.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>